[package]
name = "ScreenshotAware"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",    # 剪贴板相关
    "Win32_System_Threading",       # OpenProcess
    "Win32_System_ProcessStatus",   # GetModuleBaseName
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",           # BITMAP 相关
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",             # CF_HDROP 相关
    "Win32_Security",               # 权限相关常量
] }